--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+      <style>
+      #Search {
+        height:450px;
+        width: 100%;
+        object-fit:cover;
+      }
+    </style>
   </head>
   <body>
+    {% include 'nav.html' %}
     <div class = "container">
     <h1 class = "text-center">SearchTool</h1>
     <img id="Search" class="img-fluid" src="https://searchtool.vidyagms9634.repl.co/static/Search.jpg" height = "320">
@@ -15,6 +23,7 @@
 Search theory has been used primarily to explain labor market inefficiencies, but also for all forms of "buyers" and "sellers", whether products, homes or even spouses/partners. It can be applied. The clearing price will be met quickly as supply and demand react freely. However, this does not happen in the real world. Search theory tries to explain how.Real-world transactions involve discrete quantities of goods and services, imperfect and expensive information, and possible physical or other barriers separating buyers and sellers. parties looking to conduct business, such as a potential employee and an employer, or a buyer and a seller of goods. Their search for one another is strained by this encounter. These restrictions can come in the form of geographical differences, differing expectations regarding price and specifications, and slow response and negotiation times from one of the parties.
     </p>
       <div style="text-align:center">
+        {% include 'footer.html' %}
         <p>Copyright 2023, SearchTool</p>
   </body>
 </html>
