--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,7 +1,7 @@
 {% if results %}
   {% for result in results %}
-    <p>{{ result }}</p>
+    {{ result }}
   {% endfor %}
 {% else %}
-  <p>No results found.</p>
+  No results found.
 {% endif %}
